Fix #25934 - [Feature] Improve toxicology feature

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1707,6 +1707,7 @@
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
 					<show id="bcpg:toxCalculateSystemic" />
+					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -1719,6 +1720,7 @@
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
 					<show id="bcpg:toxCalculateSystemic" />
+					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -1739,6 +1741,7 @@
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
 					<show id="bcpg:toxCalculateSystemic" />
+					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -1755,6 +1758,7 @@
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
 					<show id="bcpg:toxCalculateSystemic" />
+					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
@@ -1821,7 +1825,8 @@
 						<control template="/org/alfresco/components/form/controls/autocomplete.ftl"/>
 					</field>
 					<field id="bcpg:toxIngSystemicValue" />
-					<field id="bcpg:toxIngMaxValue" read-only="true"/>
+					<field id="bcpg:toxIngMaxValue" />
+
 				</appearance>
 			</form>
 		</forms>
@@ -8342,13 +8347,15 @@
 				<field-visibility>
 					<show id="bcpg:toxListTox" />
 					<show id="bcpg:toxListValue" />
+					<show id="bcpg:isManualListItem" force="true" />
 				</field-visibility>
 				<appearance>
 					<field id="bcpg:toxListTox" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
 						</control>
 					</field>
-					<field id="bcpg:toxListValue" read-only="true"/>
+
+					<field id="bcpg:toxListValue" />
 				</appearance>
 			</form>
 		</forms>
@@ -8361,13 +8368,16 @@
 				<field-visibility>
 					<show id="bcpg:toxListTox" />
 					<show id="bcpg:toxListValue" />
+					<show id="bcpg:isManualListItem" force="true" />
 				</field-visibility>
 				<appearance>
 					<field id="bcpg:toxListTox" >
 						<control template="/org/alfresco/components/form/controls/autocomplete-association.ftl" >
 						</control>
 					</field>
-					<field id="bcpg:toxListValue" read-only="true"/>
+
+					<field id="bcpg:toxListValue" />
+
 				</appearance>
 			</form>
 		</forms>
