--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -6259,7 +6259,8 @@
 					<show id="bcpg:compoListQtySubFormula" />
 					<show id="bcpg:compoListUnit" />
 					<show id="bcpg:compoListQty" />
-					<show id="bcpg:compoListDeclType" />
+					<show id="bcpg:compoListLossPerc" />
+					<show id="bcpg:compoListStockType" />
 					<show id="bcpg:dynamicCharactColumn1" force="true" />
 					<show id="bcpg:dynamicCharactColumn2" force="true" />
 					<show id="bcpg:dynamicCharactColumn3" force="true" />
