--- a/becpg-share/src/main/assembly/web/components/entity-data-lists/entity-toolbar.css
+++ b/becpg-share/src/main/assembly/web/components/entity-data-lists/entity-toolbar.css
@@ -133,6 +133,7 @@
 }
 
 .datalist-toolbar .formulate.loading span.first-child,
+.datalist-toolbar .formulate-decernis.loading span.first-child,
 .datalist-toolbar .entity-refresh-reports.loading span.first-child
 {
    background: url(images/loading.gif) no-repeat 8px 4px;
