--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-sfp-form-config.xml
@@ -118,6 +118,7 @@
 					<show id="bcpg:regulatoryMode" />
 					<show id="bcpg:regulatoryRecipeId" />
 					<show id="bcpg:regulatoryResult" />
+					<show id="bcpg:regulatoryFormulatedDate" />
 					<show id="bcpg:regulatoryValidationDate" />
         </field-visibility>
         <appearance>
@@ -334,6 +335,8 @@
 					<field id="bcpg:regulatoryRecipeId" read-only="true"
 						set="regulatory" />
 					<field id="bcpg:regulatoryResult" read-only="true"
+						set="regulatory" />
+					<field id="bcpg:regulatoryFormulatedDate" read-only="true"
 						set="regulatory" />
 					<field id="bcpg:regulatoryValidationDate" mandatory="false"
 						read-only="false" set="regulatory">
