--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-rm-form-config.xml
@@ -164,6 +164,7 @@
 					<show id="bcpg:regulatoryMode" force="false" />
 					<show id="bcpg:regulatoryRecipeId" force="false" />
 					<show id="bcpg:regulatoryResult" force="false" />
+					<show id="bcpg:regulatoryFormulatedDate" force="false" />
 					<show id="bcpg:regulatoryValidationDate" force="false" />
 				</field-visibility>
 				<appearance>
@@ -376,6 +377,8 @@
 					<field id="bcpg:regulatoryRecipeId" read-only="true"
 						set="regulatory" />
 					<field id="bcpg:regulatoryResult" read-only="true"
+						set="regulatory" />
+					<field id="bcpg:regulatoryFormulatedDate" read-only="true"
 						set="regulatory" />
 					<field id="bcpg:regulatoryValidationDate" mandatory="false"
 						read-only="false" set="regulatory">
